--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   overflow: hidden;
   align-items: center;
   text-align: center;
-  background: linear-gradient(to right, rgba(68, 68, 68, 0.7), rgba(68, 68, 68, 0.2)), url(/dist/img/cory1.jpg);
+  background: linear-gradient(to right, rgba(68, 68, 68, 0.7), rgba(68, 68, 68, 0.2)), url(img/cory1.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -150,7 +150,7 @@
 .about_bio-image {
   height: 50vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(/dist/img/cory1.jpg) center top;
+  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(img/cory1.jpg) center top;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
@@ -286,7 +286,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(/dist/img/cory1.jpg);
+  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(img/cory1.jpg);
   background-size: auto;
 }
 .contact h2 {
