--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@
 .projects_bio-image {
   height: 30vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(/dist/img/cory1-Fix.jpg) center top;
+  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(img/cory1-Fix.jpg) center top;
   background-size: cover;
   display: flex;
   flex-direction: column;
