--- a/_about.scss
+++ b/_about.scss
@@ -11,7 +11,7 @@
                 rgba($primary-color, 0.9),
                 rgba($primary-color, 0.3)
             ),
-         url(/dist/img/cory1.jpg) center top;
+         url(cory1.jpg) center top;
         background-size: cover;
         background-repeat: no-repeat;
         display: flex;
