--- a/main.css
+++ b/main.css
@@ -512,4 +512,5 @@ footer {
   text-align: right;
   padding: 1rem;
   color: #fff;
-}/*# sourceMappingURL=main.css.map */
+}
+/*# sourceMappingURL=main.css.map */
