--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Space+Mono&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -512,5 +513,4 @@ footer {
   text-align: right;
   padding: 1rem;
   color: #fff;
-}
-/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
