--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
   overflow: hidden;
   align-items: center;
   text-align: center;
-  background: linear-gradient(to right, rgba(68, 68, 68, 0.7), rgba(68, 68, 68, 0.2)), url(/dist/img/cory1.jpg);
+  background: linear-gradient(to right, rgba(68, 68, 68, 0.7), rgba(68, 68, 68, 0.2)), url(cory1.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
