--- a/main.css
+++ b/main.css
@@ -150,7 +150,7 @@
 .about_bio-image {
   height: 50vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(/dist/img/cory1.jpg) center top;
+  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(cory1.jpg) center top;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
@@ -200,7 +200,7 @@
 .projects_bio-image {
   height: 30vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(/dist/img/cory1-Fix.jpg) center top;
+  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(cory1-Fix.jpg) center top;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -286,7 +286,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(/dist/img/cory1.jpg);
+  background: linear-gradient(to right, rgba(68, 68, 68, 0.9), rgba(68, 68, 68, 0.3)), url(cory1.jpg);
   background-size: auto;
 }
 .contact h2 {
